--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
   <div class="container">
       <a class="navbar-brand" href="#">Vala<span>Digital</span></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -8,24 +8,31 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Inicio <span class="sr-only">(current)</span></a>
+            <a class="nav-link" [routerLink]="['/']">Inicio <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Quienes Somos</a>
+            <a class="nav-link" [routerLink]="['/quienes-somos']">Quienes Somos</a>
           </li>
+          <li class="nav-item">
+              <a class="nav-link" [routerLink]="['/portafolio']">Portafolio</a>
+            </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Servicios
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="#">Servicio 1</a>
-              <a class="dropdown-item" href="#">Servicio 2</a>
+              <a class="dropdown-item" [routerLink]="['/landing-page']">Desarrollo de Landing Pages</a>
+              <a class="dropdown-item" [routerLink]="['/web']">Desarrollo Sitios Web</a>
+              <a class="dropdown-item" [routerLink]="['/mobile']">Desarrollo de Apps Móviles</a>
               <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="#">Servicio 3</a>
+              <a class="dropdown-item" [routerLink]="['/ecommerce']">Desarrollo de Tiendas Online</a>
             </div>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Contacto</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link btn btn-outline-light" href="#">Cotiza aquí</a>
           </li>
         </ul>
       </div>
