--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,10 @@
 <app-navbar></app-navbar>
-<router-outlet></router-outlet>
+<div class="routing">
+    <router-outlet></router-outlet>
+</div>
+<app-banner></app-banner>
+<app-clientes></app-clientes>
+<app-contacto></app-contacto>
+<app-footer></app-footer>
 
 
