--- a/src/app/slider/slider.component.css
+++ b/src/app/slider/slider.component.css
@@ -15,3 +15,5 @@ section{
 /*.bg-home{
     background: url('https://www.doapps.me/client/img/home/we-love.jpg');
 }*/
+
+.container{z-index: 999999;}
