--- a/src/app/slider/slider.component.html
+++ b/src/app/slider/slider.component.html
@@ -26,8 +26,8 @@
   </a>
 </div-->
 
-
-<section class="particles">
+<section style="position:relative;">
+    <particles [params]="myParams" [style]="myStyle" [width]="width" [height]="height"></particles>
     <div class="container">
         <div class="row">
             <div class="col-md-12 text-center">
@@ -38,5 +38,6 @@
                 <a href="" class="btn btn-outline-success">CONOCE MAS</a>
             </div>
         </div>
-    </div>
+    </div>    
 </section>
+
